# AdventOfCode

./: LICENSE  README.md
1/: 2  2-smart.py  2.rs  second.py
10/: 2.py
11/: 1.py  2.py
2/: 1.cpp  2.rs
2020/: README.md
2020/1/: 1-smart.py  1-stupid.py  1.rs
2020/10/: 1.py  2-bad.py
2020/11/: 2.py
2020/12/: 1.py  2.py
2020/13/: 1.py  2-bad.py  2.py
2020/14/: 1.py  2.py
2020/15/: 1.py  2.py
2020/16/: 1.py  2.py
2020/17/: 2.py
2020/18/: 1.py
2020/19/: bla.py
2020/2/: 1.py  1.rs  2.cpp  2.py
2020/20/: 1.py  1input
2020/3/: 1.py  2.cpp  2.py  2.rs
2020/6/: 1.py
2020/7/: 2.py
2020/8/: 2.py
2020/9/: 1.py
2021/: 1.rs  10.rs  11-vis.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml
2021/1/: 1.rs  Cargo.toml
2021/2/: 2.rs  Cargo.toml
2021/3/: 3.rs  Cargo.toml
2021/4/: 4.rs  Cargo.toml
2022/: Cargo.toml
2022/src/: 1.rs  2.rs  4.rs  6.rs
2023/: 1-1.py  1-2.py
3/: 1.cpp  1.rs
4/: 1.py  1.rs  2.py
5/: 1.py  1.rs  2.py  2.rs
6/: 2.py
7/: 1.py  2.py
8/: 1.py
9/: 2-stupid.py
