[package]
name = "aoc2021"
version = "0.1.0"
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
edition = "2018"

[[bin]]
name = "day1"
path = "1.rs"

[[bin]]
name = "day2"
path = "2.rs"

[[bin]]
name = "day3"
path = "3.rs"

[[bin]]
name = "day4"
path = "4.rs"

[[bin]]
name = "day5"
path = "5.rs"

[[bin]]
name = "day6"
path = "6.rs"

[[bin]]
name = "day7"
path = "7.rs"

[[bin]]
name = "day8"
path = "8.rs"

[[bin]]
name = "day9"
path = "9.rs"

[[bin]]
name = "day10"
path = "10.rs"

[[bin]]
name = "day11"
path = "11.rs"